# sparx

./: .gitignore  Cargo.toml
src/: cli.rs  config.rs  main.rs  utils.rs
src/commands/: create.rs  init.rs
src/my_module/: my_module.rs
