[package]
name = "sparx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.68"
log= "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap={version="4.0.32",features=["cargo"]}
copy_dir="0.1.2"
walkdir="2.3.2"
convert_case="0.6.0"